@@ -111,14 +111,37 @@ sub retall {
 };
 
 my $vart = 'table1';
+my $self = { table => 'table1', id => 42 };
+my %self = ( table => 'table1', id => 42 );
 sub vartable {
 	table: my $t1 = $vart;
 	my $t2 : table2;
 	$t1->id == $t2->table1_id;
 	return $t1, $t2->name;
 };
+sub vartable1 {
+	table: my $t1 = $self{table};
+	my $t2 : table2;
+	$t1->id == $t2->table1_id;
+	return $t1, $t2->name;
+};
+sub vartable2 {
+	table: my $t1 = $self->{table};
+	my $t2 : table2;
+	$t1->id == $t2->table1_id;
+	return $t1, $t2->name;
+};
 
-my ($sql, $v) = DBIx::Perlish::gen_sql(\&vartable, "select");
+sub hashref1 {
+	my $t : table1;
+	$t->id == $self->{id};
+};
+sub hashref2 {
+	my $t : table1;
+	$t->id == $self{id};
+};
+
+my ($sql, $v) = DBIx::Perlish::gen_sql(\&vartable2, "select");
 print "$sql\n";
 print "values: ", join ", ", @$v;
 print "\n";
